changes to competition